# wadribie_robot

./: CMakeLists.txt  package.xml
launch/: computer.launch  wadribie.launch
model/: rplidar.scad
urdf/: wadribie.urdf.xacro
wadribie_bringup/: CMakeLists.txt  package.xml
wadribie_bringup/launch/: computer.launch  ekf.launch  hector-mapping.launch  imu.launch  joy_teleop.launch  localization.launch  map_server.launch  wadribie.launch
wadribie_bringup/maps/: map_finished.yaml  map_unfinished.yaml
wadribie_bringup/rviz/: test.rviz
wadribie_description/: CMakeLists.txt  package.xml
wadribie_description/launch/: wadribie_rviz.launch
wadribie_description/model/: rplidar.stl
wadribie_description/urdf/: wadribie.urdf.xacro
wadribie_gazebo/: CMakeLists.txt  package.xml
wadribie_gazebo/launch/: spawn_wadribie.launch  wadribie.launch
wadribie_gazebo/worlds/: testhouse.world
wadribie_navigation/: CMakeLists.txt  package.xml
wadribie_navigation/config/: controllers.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  planners.yaml  recovery_behaviors.yaml
wadribie_navigation/launch/: localization.launch  map_server.launch  move_base_flex.launch
wadribie_navigation/rviz/: navigation.rviz
wadribie_navigation/scripts/: navigation_sm.py
