<?xml version="1.0"?>
<package format="2">
  <name>wadribie_robot</name>
  <version>1.0.0</version>
  <description>Driver to controll a simple robot chassis</description>

  <maintainer email="mklpiening@uos.de">Malte kl. Piening</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
