<?xml version="1.0"?>
<package format="2">
  <name>wadribie_bringup</name>
  <version>1.0.0</version>
  <description>Bringup files for wadribie</description>

  <maintainer email="mklpiening@uos.de">Malte kl. Piening</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
